<resources>
    <string name="app_name">MadcampWeek2</string>
    <string name="splash_text">싫어하면\n\n 울 리 는</string>
    <string name="splash_text2">--------</string>
    <string name="title_contact">Contacts</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_app_id">305810097272562</string> <string name="fb_login_protocol_scheme">fb305810097272562</string>
    <string name="title_map">Map</string>
    <string name="user_profile">Profile</string>
    <string name="dialog_title">Setting Uid for contacts list</string>
    <string name="dialog_text">Your Uid</string>
    <string name="button_reload">Reload Contacts</string>
    <string name="dialog_addcontact_title">Add contact</string>
    <string name="dialog_addcontact_name">Name</string>
    <string name="dialog_addcontact_phone">Phonenumber</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_imagetitle">Upload Image from</string>
    <string name="from_gallery">Gallery</string>
    <string name="from_camera">Camera</string>
</resources>