<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/textViewAddContact"
        android:layout_width="221dp"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="28sp"
        android:text="@string/dialog_addcontact_title" />

    <TextView
        android:id="@+id/textViewAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAddContact"
        android:text="@string/dialog_addcontact_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textViewAddName">
    </EditText>

    <TextView
        android:id="@+id/textViewAddPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_addcontact_phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/editTextAddName" />

    <EditText
        android:id="@+id/editTextAddPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textViewAddPhone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAddPhone"
        android:layout_marginBottom="20dp" >
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/buttonSubmit"
        android:layout_weight="1"
        android:text="@string/button_cancel" />
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/buttonCancel"
        android:layout_weight="1"
        android:text="@string/button_submit" />
    </LinearLayout>

</RelativeLayout>
