<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/dialog_imagetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/dialog_imagetitle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_imagetitle"
        android:id="@+id/fromgallery"
        android:layout_marginBottom="10dp"
        android:text="@string/from_gallery" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fromgallery"
        android:id="@+id/fromcamera"
        android:layout_marginBottom="10dp"
        android:text="@string/from_camera" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/fromcamera"-->
<!--        android:layout_marginBottom="20dp" >-->
<!--        <Button-->
<!--            android:id="@+id/buttonCancel"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_toLeftOf="@id/buttonReload"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/button_cancel" />-->
<!--        <Button-->
<!--            android:id="@+id/buttonReload"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_toRightOf="@id/buttonCancel"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/button_reload" />-->
<!--    </LinearLayout>-->

</RelativeLayout>